# damage-eos

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build-wasm.sh  index.html  sample-config.json  style.css
.github/workflows/: build-and-test.yml  deploy.yml
levelup-stats/: Abomasnow.json  Abra.json  Absol.json  Aerodactyl.json  Aggron.json  Aipom.json  Alakazam.json  Altaria.json  Ambipom.json  Ampharos.json  Anorith.json  Arbok.json  Arcanine.json  Arceus.json  Ariados.json  Armaldo.json  Aron.json  Articuno.json  Azelf.json  Azumarill.json  Azurill.json  Bagon.json  Baltoy.json  Banette.json  Barboach.json  Bastiodon.json  Bayleef.json  Beautifly.json  Beedrill.json  Beldum.json  Bellossom.json  Bellsprout.json  Bibarel.json  Bidoof.json  Blastoise.json  Blissey.json  Bonsly.json  Breloom.json  Bronzong.json  Bronzor.json  (+403 more)
scripts/: loading.js  main.js
scripts/components/: StateTrackingForm.js  TableOutput.js  calc-output.js  dungeon-form.js  misc-form.js  monster-form.js  move-form.js  move-output.js  rng-form.js  species-input.js  species-output.js
scripts/components/base/: InputStateTracker.js  checkbox-input.js  checkbox-list-input.css  checkbox-list-input.js  controlled-select-list-input.js  number-input.css  number-input.js  popup-info.css  popup-info.js  select-input.js
scripts/components/wasm/: damagecalc.js
src/: CMakeLists.txt  cfgparse.cpp  cfgparse.hpp  cfgparse_tests.cpp  damage.cpp  damage.hpp  damage_tests.cpp  damagecalc_cli.cpp  idmap.cpp  idmap.hpp  idmap_tests.cpp  mathutil.cpp  mathutil.hpp  mathutil_tests.cpp  mechanics.cpp  mechanics.hpp  mechanics_tests.cpp  pmdsky.hpp  versions.hpp  wasm_bindings.cpp
